Removed TodoGroup row-gap to prevent jump when task is added

--- a/src/components/templates/Todo/TodoGroup/TodoAdd/styles.module.scss
+++ b/src/components/templates/Todo/TodoGroup/TodoAdd/styles.module.scss
@@ -1,7 +1,6 @@
 @import "styles/mixins";
 
 .todo-new {
-  margin-top: 1rem;
   display: flex;
   column-gap: 1rem;
 
