--- a/src/components/templates/Todo/TodoGroup/TodoTask/styles.module.scss
+++ b/src/components/templates/Todo/TodoGroup/TodoTask/styles.module.scss
@@ -14,6 +14,7 @@
   justify-content: flex-start;
   align-items: center;
   cursor: grab;
+  margin-bottom: 0.5rem;
 
   &--finished {
     transition: filter 300ms;
