--- a/src/components/templates/Todo/TodoGroup/styles.module.scss
+++ b/src/components/templates/Todo/TodoGroup/styles.module.scss
@@ -9,6 +9,5 @@
   &__list {
     display: flex;
     flex-direction: column;
-    row-gap: 0.5rem;
   }
 }
